--- a/CHROME/background/note.scss
+++ b/CHROME/background/note.scss
@@ -18,27 +18,30 @@ canvas#pwj_draw{
 	position:fixed;
 	left:0px;
 	bottom:0px;
-	height:50px;
+	height:25px;
 	width:100%;
 	background-color: #aaa;
 	box-shadow: 0 -2px 20px #000;
 	z-index: 9999;
-	opacity:0.5;
-}
-#pwj_tool_box:hover{
-	opacity:1;
+	opacity:0.3;
+	&:hover{
+		opacity:1;
+	}
+	>*{
+		display: inline-block;
+	}
 }
 .pwj_color_picker{
 	width:50px;
-	height:50px;
+	height:25px;
 	border:none;
 	float:left;
 	margin:0px;
 }
 .pwj_button{
-	width:50px;
-	height:50px;
-	float:left;
+	//width:50px;
+	//height:25px;
+	//float:left;
 }
 .pwj_note_box{
 	position:absolute;
@@ -53,6 +56,9 @@ canvas#pwj_draw{
 	cursor:move;
 	opacity:0.8;
 	-webkit-transition: opacity 300ms ease-in-out;
+}
+.untouchable:not(.touch-me-now){
+	pointer-events: none;
 }
 .pwj_note_box:hover{
 	opacity:1;
